[package]
name = "muthr"
version = "0.1.23"
edition = "2021"
rust-version = "1.95"
authors = ["tappunk"]
description = "A zero-trust orchestrator that automates secure inference and isolated execution of local AI agents."
repository = "https://github.com/tappunk/muthr"
license = "MIT"
readme = "README.md"
keywords = ["cli", "tui", "lima", "llama-cpp", "macos"]
categories = [
  "command-line-utilities",
  "virtualization",
  "artificial-intelligence",
  "development-tools",
  "security",
]

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
clap_complete = "4.5"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
indicatif = "0.18"
reqwest = { version = "0.12", features = ["json"] }
ratatui = "0.30"
crossterm = "0.29"
color-eyre = "0.6"
ini = "1.3"
glob = "0.3"
tempfile = "3.15"
libc = "0.2"
dirs = "6.0"

[profile.release]
lto = true
opt-level = 2
codegen-units = 1
