[package]
name = "muthr"
version = "0.1.33"
edition = "2024"
rust-version = "1.95"
authors = ["tappunk"]
description = "A zero-trust orchestrator that automates secure inference and isolated execution of local AI agents."
repository = "https://github.com/tappunk/muthr"
license = "MIT"
readme = "README.md"
keywords = ["cli", "lima", "llama-cpp", "macos"]
categories = [
  "command-line-utilities",
  "virtualization",
  "artificial-intelligence",
  "development-tools",
  "security",
]

[dependencies]
clap = { version = "4.5.0", features = ["derive", "env", "cargo"] }
clap_complete = "4.5.0"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
toml = "0.8.0"
indicatif = "0.18.0"
reqwest = { version = "0.12.0", features = ["json"] }
color-eyre = "0.6.0"
ini = "1.3.0"
glob = "0.3.0"
tempfile = "3.15.0"
libc = "0.2.0"
dirs = "6.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
