[package]
name = "muthr"
version = "0.1.39"
edition = "2024"
rust-version = "1.95"
authors = ["tappunk"]
description = "A zero-trust orchestrator that automates secure inference and isolated execution of local AI agents."
repository = "https://github.com/tappunk/muthr"
license = "MIT"
readme = "README.md"
keywords = ["cli", "lima", "llama-cpp", "macos"]
categories = [
  "command-line-utilities",
  "virtualization",
  "artificial-intelligence",
  "development-tools",
  "security",
]

[dependencies]
clap = { version = "=4.6.1", features = ["derive", "env", "cargo"] }
clap_complete = "=4.6.5"
tokio = { version = "=1.52.3", features = ["full"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
toml = "=0.8.23"
indicatif = "=0.18.4"
reqwest = { version = "=0.12.28", features = ["json"] }
color-eyre = "=0.6.5"
ini = "=1.3.0"
glob = "=0.3.3"
tempfile = "=3.27.0"
libc = "=0.2.186"
dirs = "=6.0.0"
serde_yaml = "=0.9.34"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
